# Traveller

./: .env  .gitignore  AUTHORS  CMakeLists.txt  README.md  compile.sh  flake.nix
include/: Genetic_algorithm.h  Line.h  Node.h  Travelling_salesman_problem.h  mainWindow.h  mainwindow.h
src/: Genetic_algorithm.cpp  Line.cpp  Node.cpp  Travelling_salesman_problem.cpp  main.cpp  main.cpp.gui  main.cpp.tui  mainWindow.cpp  mainwindow.cpp
