# Minimum version of CMake required
cmake_minimum_required(VERSION 3.5)

# Project name
project(TravellingSalesMan)

# Add the executable
add_executable(Travelling_SalesMan_Problem src/main.cpp)

# Set the output directory for the executable
set(EXECUTABLE_OUTPUT_PATH /home/lenny/Documents/cppLab/tsp)
